Bug 1283629 - [1.1] Check for cached library file availability before reusing it. r=glandium, a=gchang